tooling/nargo_cli/tests/snapshots/compile_failure/field_modulo/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Cannot do modulo on Fields, try casting to an integer first
  ┌─ src/main.nr:2:5
  │
2 │     x % 2
  │     -----
  │

Aborting due to 1 previous error
