tooling/nargo_cli/tests/snapshots/compile_failure/field_modulo/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Cannot do modulo on Fields, try casting to an integer first
  ┌─ src/main.nr:2:5
  │
2 │     x % 2
  │     -----
  │

Aborting due to 1 previous error
